--- a/app/src/scss/components/section-two.scss
+++ b/app/src/scss/components/section-two.scss
@@ -1,6 +1,9 @@
-section{
-  background-color: purple;
-}
 .two{
-  background-color: purple;
+  text-align: center;
+  h2{
+    letter-spacing: 3px;
+    padding: 25px 0;
+    font-size: 48px;
+    color: #fff;
+  }
 }
