--- a/app/src/pug/second.pug
+++ b/app/src/pug/second.pug
@@ -9,3 +9,4 @@ block content
   div.main-wrap
     include ./components/_section-two
     include ./components/_section-one
+    include ./components/_section-two
