--- a/app/src/scss/components/section-one.scss
+++ b/app/src/scss/components/section-one.scss
@@ -1,7 +1,19 @@
 .one{
-  background-color: blanchedalmond;
-  h1{
-    font-size: 64px;
-    color: aqua;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  picture{
+    img{
+      max-width: 50vw;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  svg{
+    margin-bottom: 50px;
+    width: 100%;
+    max-width: 150px;
   }
 }
